--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,23 @@
-body,
-html {
-    margin: 0;
-}
-ul {
-    list-style-type: none;
+@import url('');
+
+* {
     margin: 0;
     padding: 0;
-    overflow: hidden;
-    background-color: #333;
-  }
-  
-  li {
-    float: left;
-  }
-  
-  li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  li a:hover:not(.active) {
-    background-color: #111;
-  }
-  
-  .active {
-    background-color: #04AA6D;
-  }
+    box-sizing: border-box;
+}
+
+
+/* html, body {
+    scroll-behavior: smooth;
+} */
+
+
+
+article {
+    width: 100vw;
+    height: 100vh;
+    background-image: url('../../images/nxtmuseum_afbeelding.png');
+    background-position: bottom;
+    background-size: cover;
+}
+
