--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,9 @@ ul {
     text-decoration: underline;
     font-weight: bold;
 }
-body , html{
+
+body,
+html {
     overflow-x: hidden;
 }
 
@@ -147,12 +149,13 @@ p {
     color: #7c7c7c;
     padding: 0px 40px;
 }
-.events .ctn{
-margin-top: 30px;
+
+.events .ctn {
+    margin-top: 30px;
 }
 
 
-.explore{
+.explore {
     width: 100%;
     height: 100vh;
     background-image: url('../images/pitholeslicht.jpg');
@@ -165,35 +168,74 @@ margin-top: 30px;
     justify-content: center;
     text-shadow: 2px 2px #ED5AB3;
 }
-.explore-content{
-width: 50%;
-padding: 50px;  
-color: whitesmoke;  
-display: flex;
-flex-direction: column;
-align-items: center;
+
+.explore-content {
+    width: 50%;
+    padding: 50px;
+    color: whitesmoke;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.explore-content h1{
-font-size: 7vmin;
-margin: 50px;
+.explore-content h1 {
+    font-size: 7vmin;
+    margin: 50px;
 }
 
-.explore-content .line{
+.explore-content .line {
     margin-bottom: 50px;
 }
 
-.explore-content p{
+.explore-content p {
     color: rgb(221, 221, 221)
 }
 
-.explore-content .ctn{
+.explore-content .ctn {
     margin-top: 40px;
 }
 
+/* 
+.tours .row .col{
+    width: 50%;
+} */
+
+.content-col {
+    width: 40%;
+}
+
+.image-col {
+    width: 60%;
+}
 
 
+.tours .image-gallery {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    align-items: center;
+}
 
+.image-gallery img {
+    max-width: 300px;
+    margin: 10px;
+}
+
+.content-col h1{
+font-size: 7vmin;
+color: #484872;
+}
+
+
+.content-col .line{
+    margin-left: -1px;
+}
+
+
+.content-col p{
+    padding: 0;
+    margin: 30px auto;
+}
 /* mobile */
 
 
