translated met php

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "monsterrat", sans-serif;
+}
+
+.translate_e a{
+    width: 100px;
 }
 
 
@@ -21,13 +26,15 @@ ul {
     font-weight: bold;
 }
 
+
+
 body,
 html {
     overflow-x: hidden;
 }
 
 .navbar {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     display: flex;
@@ -57,7 +64,7 @@ a {
 header {
     width: 100vw;
     height: 100vh;
-    background-image: url('../../images/nxtmuseum_afbeelding.png');
+    background-image: url('../images/nxtmuseum_afbeelding.png');
     background-position: bottom;
     background-size: cover;
     display: flex;
@@ -74,6 +81,10 @@ header {
 
 .header-content h2 {
     font-size: 4vmin;
+}
+.taal-switcher {
+    height: 32px;
+    width: auto;
 }
 
 .line {
@@ -188,17 +199,14 @@ p {
 }
 
 .explore-content p {
-    color: rgb(221, 221, 221)
+    color: rgb(221, 221, 221);
+    font-size: 30px;
 }
 
 .explore-content .ctn {
     margin-top: 40px;
 }
 
-/* 
-.tours .row .col{
-    width: 50%;
-} */
 
 .content-col {
     width: 40%;
@@ -221,21 +229,96 @@ p {
     margin: 10px;
 }
 
-.content-col h1{
-font-size: 7vmin;
-color: #484872;
+.content-col h1 {
+    font-size: 7vmin;
+    color: #484872;
 }
 
 
-.content-col .line{
+.content-col .line {
     margin-left: -1px;
 }
 
 
-.content-col p{
+.content-col p {
     padding: 0;
     margin: 30px auto;
 }
+
+
+
+.content-col .ctn {
+    margin-left: -100px;
+}
+
+
+.checked {
+    color: orange;
+}
+
+.testimonials {
+    padding: 40px 0;
+    background: #f1f1f1;
+    color: #434343;
+    text-align: center;
+}
+
+.inner {
+    max-width: 1500px;
+    margin: auto;
+    overflow: hidden;
+    padding: 0 20px;
+}
+
+
+.border {
+    width: 100%;
+    height: 200px;
+    background: #ED5AB3;
+    margin: 26 px auto;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.col {
+    flex: 33.33%;
+    max-width: 33.33%;
+    box-sizing: border-box;
+    padding: 15px;
+}
+
+.testimonials {
+    background: #fff;
+    padding: 30px;
+}
+
+.name {
+    font-size: 15px;
+    text-transform: uppercase;
+
+}
+
+
+
+.footer {
+    width: 100%;
+    min-height: 150px;
+    padding: 20px 80px;
+    margin: 0;
+    background: #484872;
+    text-align: center;
+}
+
+.footer p {
+    color: whitesmoke;
+    margin: 20px auto;
+    padding: 20px auto;
+}
+
 /* mobile */
 
 
@@ -272,7 +355,66 @@ color: #484872;
 
     .nav-links li {
         margin: 30px auto;
-
     }
 
+
+    /* events */
+
+    .row {
+        flex-direction: column;
+    }
+
+    .row .col {
+        margin: 20px auto;
+    }
+
+    .col img {
+        max-width: 90%;
+    }
+
+
+    /* explore */
+
+    .explore-content {
+        width: 100%;
+    }
+
+    .tours {
+        width: 100%;
+    }
+
+    .image-gallery {
+        justify-content: center;
+        align-items: center;
+    }
+
+    .image-gallery img {
+        width: 90%;
+    }
+
+    .footer {
+        padding: 10px;
+    }
+
+}
+
+/* animatie's*/
+
+img {
+    transition: transform.3s ease;
+}
+
+img:hover {
+    transform: scale(1.1);
+}
+
+.ctn:hover {
+    background: whitesmoke;
+    color: #ED5AB3;
+    box-shadow: 2px 2px 5px black;
+}
+
+li:hover {
+    color: #ED5AB3;
+    cursor: zoom-out;
 }
